Modelos espaço hiperbolico

--- a/bib.bib
+++ b/bib.bib
@@ -28,5 +28,14 @@
   title = {Curvature of Riemannian Manifolds},
   year = {2015},
   url = {https://www.mathi.uni-heidelberg.de/~lee/Soeren05.pdf}
-  
+}
+
+@inbook{hyp,
+  author         = {James W. Cannon e William J. Floyd e Richard Kenyon e Walter R. Parry},
+  chapter        = {2},
+  editor         = {Silvio Levy},
+  pages          = {59 até 115},
+  publisher      = {MSRI Publications},
+  title          = {Flavours of Geometry},
+  year           = {1997}
 }
