--- a/bib.bib
+++ b/bib.bib
@@ -39,3 +39,22 @@
   title          = {Flavours of Geometry},
   year           = {1997}
 }
+
+@inbook{bpr,
+  author         = {Abraham Ungar},
+  chapter        = {2 e 3},
+  editor         = {Themistocles M. Rassias},
+  pages          = {9 até 97},
+  publisher      = {Elsevier},
+  title          = {Beyond Pseudo-rotations in Pseudo-Euclidean Spaces - An Introduction to the Theory of Bi-gyrogroups and Bi-gyrovector Spaces},
+  year           = {2018}
+}
+
+@article{mfgr,
+  author          = {M. Ferreira e G. Ren},
+  journal         = {Journal of Algebra},
+  number          = {1},
+  title           = {Möbius gyrogroups: A Clifford algebra approach},
+  volume          = {328},
+  year            = {2011}
+}
