--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@
 
 \section{Introdução}
 
-\section{Geometria hiperbólica}
+\section{Geometria riemanniana}
 
 \subsection{Variedades e métricas riemannianas}
 
