--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@
     \vspace{4cm}
     
     \rule{\linewidth}{0.5mm}\\[0.4cm]
-    {\huge \textbf{Aprendizado de máquina e geometria hiperbólica complexa}}
+    {\huge \textbf{Aprendizado profundo e geometria hiperbólica}}
     \rule{\linewidth}{0.5mm}\\[1.0cm]
     
     \vspace{1.0cm}
