--- a/bib.bib
+++ b/bib.bib
@@ -58,3 +58,9 @@
   volume          = {328},
   year            = {2011}
 }
+
+@misc{pyt,
+  title={PyTorch documentation - PyTorch 1.13 documentation},
+  url={https://pytorch.org/docs/stable/index.html},
+  note={Acessado: 01-03-2023}
+}
