--- a/main.tex
+++ b/main.tex
@@ -673,7 +673,7 @@ list(torch.arange(T.ndim - 1, -1, -1))
 
 \subsection{Trabalhando com tensores}
 
-
+Tensores podem ficar bem grandes e, para entender uma grande quantidade de dados, é interessante saber computar certas informações estatísticas sobre esses dados. Para isso, existem quatro 
 
 \nocite{*}
 \printbibliography
